Генерация происходит, но звонки генерируются неравномерно

--- a/src/main/resources/db/changelog/v2-add-data.yaml
+++ b/src/main/resources/db/changelog/v2-add-data.yaml
@@ -7,17 +7,59 @@ databaseChangeLog:
             tableName: callers
             columns:
               - column:
-                  name: callerNumber
+                  name: caller_number
                   value: "89001112233"
         - insert:
             tableName: callers
             columns:
               - column:
-                  name: callerNumber
+                  name: caller_number
                   value: "89002223344"
         - insert:
             tableName: callers
             columns:
               - column:
-                  name: callerNumber
+                  name: caller_number
                   value: "89003334455"
+        - insert:
+            tableName: callers
+            columns:
+              - column:
+                  name: caller_number
+                  value: "89004445566"
+        - insert:
+            tableName: callers
+            columns:
+              - column:
+                  name: caller_number
+                  value: "89005556677"
+        - insert:
+            tableName: callers
+            columns:
+              - column:
+                  name: caller_number
+                  value: "89006667788"
+        - insert:
+            tableName: callers
+            columns:
+              - column:
+                  name: caller_number
+                  value: "89007778899"
+        - insert:
+            tableName: callers
+            columns:
+              - column:
+                  name: caller_number
+                  value: "89008889900"
+        - insert:
+            tableName: callers
+            columns:
+              - column:
+                  name: caller_number
+                  value: "89009990011"
+        - insert:
+            tableName: callers
+            columns:
+              - column:
+                  name: caller_number
+                  value: "89001001122"
