--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,6 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password: password
-    initialization-mode: always
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
@@ -27,4 +26,4 @@ spring:
       path: /h2-console
       settings:
         trace: false
-        web-allow-others: false
+        web-allow-others: true
