--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   rabbitmq:
-    image: rabbitmq:3.12-management
+    image: rabbitmq:management
     container_name: romashka-rabbitmq
     ports:
       - "5672:5672"  # Порт для AMQP
