--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -79,6 +79,29 @@ spring:
     template:
       message-converter: simpleMessageConverter
 
+  datasource:
+    url: jdbc:h2:mem:roaming_cdr_db
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: password
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        trace: false
+        web-allow-others: true
+
 # Настройки приложения
 app:
   export:
