--- a/brt/src/main/resources/application.yml
+++ b/brt/src/main/resources/application.yml
@@ -21,20 +21,15 @@ spring:
   application:
     name: romashka-telecom
 
-  sql:
-    init:
-      mode: always
-
   datasource:
-    url: jdbc:h2:mem:roaming_cdr_db
+    url: jdbc:h2:mem:roaming_brt_db;
     driver-class-name: org.h2.Driver
     username: sa
     password: password
 
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
@@ -44,9 +39,6 @@ spring:
     console:
       enabled: true
       path: /h2-console
-      settings:
-        trace: false
-        web-allow-others: true
 
   rabbitmq:
     host: localhost
@@ -64,7 +56,7 @@ spring:
 
 ---
 # ---------------------------------------------------------
-# Docker‑профиль (в контейнере)
+# Docker‑профиль (PostgreSQL + Liquibase)
 # ---------------------------------------------------------
 spring:
   config:
@@ -76,31 +68,28 @@ spring:
     port: 5672
     username: guest
     password: guest
-    template:
-      message-converter: simpleMessageConverter
 
   datasource:
-    url: jdbc:h2:mem:roaming_cdr_db
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: password
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
 
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-      settings:
-        trace: false
-        web-allow-others: true
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog/db.changelog-master.yaml
+
+  server:
+    port: 8081
 
 # Настройки приложения
 app:
@@ -115,3 +104,4 @@ logging:
     org.springframework.amqp: DEBUG
     com.romashka.romashka_telecom: INFO
     root: WARN
+    liquibase: DEBUG
