Корректно работает коэффициент для модельного времени

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,11 +44,12 @@ services:
       rabbitmq:
         condition: service_healthy
     environment:
-      SPRING_PROFILES_ACTIVE: docker
+      SPRING_PROFILES_ACTIVE: docker,simulation
       SPRING_RABBITMQ_HOST: rabbitmq
       SPRING_RABBITMQ_PORT: 5672
       SPRING_RABBITMQ_USERNAME: guest
       SPRING_RABBITMQ_PASSWORD: guest
+#      TIME_COEFFICIENT: "5.0" # в реальной системе: TIME_COEFFICIENT: "1.0"
 
   brt:
     build:
