Модельное время обрабатывается в BRT

--- a/cdr/build.gradle
+++ b/cdr/build.gradle
@@ -16,6 +16,8 @@ springBoot {
 }
 
 dependencies {
+	implementation project(':romashka-common')
+
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
