--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,9 @@ services:
       SPRING_RABBITMQ_PORT: 5672
       SPRING_RABBITMQ_USERNAME: guest
       SPRING_RABBITMQ_PASSWORD: guest
-#      TIME_COEFFICIENT: "5.0" # в реальной системе: TIME_COEFFICIENT: "1.0"
+      TIME_COEFFICIENT: "87600.0" # "175200.0" # в реальной системе: TIME_COEFFICIENT: "1.0"
+      TIME_START: "2025-01-01T00:00:00"
+      TIME_END: "2025-12-31T23:59:59"
 
   brt:
     build:
@@ -72,6 +74,9 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-brt:5432/brt_db
       SPRING_DATASOURCE_USERNAME: brt_user
       SPRING_DATASOURCE_PASSWORD: brt_pass
+      TIME_COEFFICIENT: "87600.0" # "175200.0" # в реальной системе: TIME_COEFFICIENT: "1.0"
+      TIME_START: "2025-01-01T00:00:00"
+      TIME_END: "2025-12-31T23:59:59"
 
 volumes:
   brt_pgdata:
