--- a/brt/build.gradle
+++ b/brt/build.gradle
@@ -12,6 +12,8 @@ springBoot {
 }
 
 dependencies {
+	implementation project(':romashka-common')
+
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
