--- a/brt/src/main/resources/application.yml
+++ b/brt/src/main/resources/application.yml
@@ -1,4 +1,13 @@
 # ---------------------------------------------------------
+# Общие настройки сервиса
+# ---------------------------------------------------------
+
+time:
+  start: ${TIME_START:2025-01-01T00:00:00}
+  end: ${TIME_END:2025-12-31T23:59:59}
+  coefficient: ${TIME_COEFFICIENT:175200.0}  # 87600.0
+
+# ---------------------------------------------------------
 # Общие настройки RabbitMQ (всегда активны)
 # ---------------------------------------------------------
 rabbitmq:
