--- a/cdr/src/main/resources/application.yml
+++ b/cdr/src/main/resources/application.yml
@@ -3,9 +3,9 @@
 # ---------------------------------------------------------
 
 time:
-  start: 2025-01-01T00:00:00
-  end: 2025-12-31T23:59:59
-  coefficient: 175200.0 # 87600.0
+  start: ${TIME_END:2025-01-01T00:00:00}
+  end: ${TIME_START:2025-12-31T23:59:59}
+  coefficient: ${TIME_COEFFICIENT:175200.0}  # 87600.0
 
 # ---------------------------------------------------------
 # Общие настройки RabbitMQ (всегда активны)
