--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       POSTGRES_USER: hrs_user
       POSTGRES_PASSWORD: hrs_pass
     ports:
-      - "5433:5433"
+      - "5433:5432"
     volumes:
       - hrs_pgdata:/var/lib/postgresql/data
     healthcheck:
@@ -106,7 +106,7 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
-      postgres-brt:
+      postgres-hrs:
         condition: service_healthy
     environment:
       SPRING_PROFILES_ACTIVE: docker
@@ -114,7 +114,7 @@ services:
       SPRING_RABBITMQ_PORT: 5672
       SPRING_RABBITMQ_USERNAME: guest
       SPRING_RABBITMQ_PASSWORD: guest
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-hrs:5433/hrs_db
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-hrs:5432/hrs_db
       SPRING_DATASOURCE_USERNAME: hrs_user
       SPRING_DATASOURCE_PASSWORD: hrs_pass
       TIME_COEFFICIENT: "87600.0" # "175200.0" # в реальной системе: TIME_COEFFICIENT: "1.0"
