--- a/brt/build.gradle
+++ b/brt/build.gradle
@@ -3,7 +3,6 @@ plugins {
 	id 'io.spring.dependency-management'
 }
 
-
 springBoot {
 	mainClass = 'com.romashka.romashka_telecom.brt.BRTApplication'
 }
@@ -17,6 +16,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.liquibase:liquibase-core'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
 
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
