--- a/brt/src/main/resources/application.yml
+++ b/brt/src/main/resources/application.yml
@@ -129,6 +129,10 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+          batch_size: 50
+          order_inserts: true
+          order_updates: true
 
   liquibase:
     enabled: false
