--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,7 +117,7 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-hrs:5432/hrs_db
       SPRING_DATASOURCE_USERNAME: hrs_user
       SPRING_DATASOURCE_PASSWORD: hrs_pass
-      TIME_COEFFICIENT: "87600.0" # "175200.0" # в реальной системе: TIME_COEFFICIENT: "1.0"
+      TIME_COEFFICIENT: "87600.0" # "175200.0" = 3 минуты # в реальной системе: TIME_COEFFICIENT: "1.0"
       TIME_START: "2025-01-01T00:00:00"
       TIME_END: "2025-12-31T23:59:59"
 
