--- a/hrs/src/main/resources/application.yml
+++ b/hrs/src/main/resources/application.yml
@@ -25,6 +25,20 @@ rabbitmq:
       name: hrs-to-brt.queue
     routing:
       key: hrs-to-brt.routingkey
+  monthly-fee-brt-to-hrs:
+    exchange:
+      name: monthly-fee-brt-to-hrs.exchange
+    queue:
+      name: monthly-fee-brt-to-hrs.queue
+    routing:
+      key: monthly-fee-brt-to-hrs.routingkey
+  monthly-fee-hrs-to-brt:
+    exchange:
+      name: monthly-fee-hrs-to-brt.exchange
+    queue:
+      name: monthly-fee-hrs-to-brt.queue
+    routing:
+      key: monthly-fee-hrs-to-brt.routingkey
 
 ---
 # ---------------------------------------------------------
