--- a/crm/src/main/resources/application.yml
+++ b/crm/src/main/resources/application.yml
@@ -87,6 +87,9 @@ spring:
         max-interval: 10000ms
         max-attempts: 3
 
+  liquibase:
+    change-log: classpath:/db/changelog/db.changelog-master.yaml
+
 logging:
   level:
     org.springframework.amqp: DEBUG
