--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 plugins {
 	id 'org.springframework.boot' version '3.4.4' apply false
 	id 'io.spring.dependency-management' version '1.1.7' apply false
+	id 'java'
+	id 'jacoco'
 }
 
 allprojects {
 	group = 'com.romashka'
 	version = '0.0.1-SNAPSHOT'
+	sourceCompatibility = '17'
 	repositories {
 		mavenCentral()
 	}
@@ -15,6 +18,7 @@ subprojects {
 	apply plugin: 'java'
 	apply plugin: 'org.springframework.boot'
 	apply plugin: 'io.spring.dependency-management'
+	apply plugin: 'jacoco'
 
 	java {
 		toolchain {
@@ -38,5 +42,29 @@ subprojects {
 
 	test {
 		useJUnitPlatform()
+		finalizedBy jacocoTestReport
 	}
+
+	jacoco {
+		toolVersion = "0.8.11"
+	}
+
+	jacocoTestReport {
+		dependsOn test
+		reports {
+			xml.required = true
+			html.required = true
+		}
+		afterEvaluate {
+			classDirectories.setFrom(files(classDirectories.files.collect {
+				fileTree(dir: it, exclude: [
+					'**/config/**',
+					'**/dto/**',
+					'**/model/**',
+					'**/entity/**'
+				])
+			}))
+		}
+	}
+
 }
